modulo de alertas
